traefik/traefik-deploy.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccount: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-conf
        - name: traefik-acme-vol
          persistentVolumeClaim:
            claimName: traefik-acme
            # hostPath:
            #path: /srv/configs
      containers:
        - image: traefik
          name: traefik-ingress-lb
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/config"
              name: "config"
            - mountPath: "/acme"
              name: traefik-acme-vol
              #subPath: acme.json
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 8080
          args:
            - --configfile=/config/traefik.toml
            - --kubernetes
            - --logLevel=DEBUG
                                                                                                                                                                   47,1          Bot
