traefik/traefik-extservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: traefik-ingress-lb
    serviceapp: traefik
  name: traefik
  namespace: traefik
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: admin
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: traefik-ingress-lb
  type: LoadBalancer
